# pusl

./: .gitignore  Cargo.toml  README.md  bless.py
docs/: memory.md  structs.md  syntax.md
garbage/: Cargo.toml
garbage/src/: lib.rs
garbage/tests/: garbage_tests.rs
pusl/: Cargo.toml
pusl/resources/: small_source.pusl
pusl/src/: lib.rs  main.rs  value.rs
pusl/src/lexer/: mod.rs  token.rs
pusl/src/parser/: branch.rs  expression.rs  mod.rs
pusl/tests/: lexer_test.rs  parser_test.rs
pusl_demo/: Cargo.toml
pusl_demo/resources/: simple_program.pusl  small_source.pusl
pusl_demo/src/: main.rs
pusl_lang/: Cargo.toml  test.rs
pusl_lang/resources/: errors.pusl  fibb.pusl  generator.pusl  secondary_source.pusl  simple_program.pusl  small_source.pusl
pusl_lang/src/: lib.rs  test_util.rs
pusl_lang/src/backend/: argparse.rs  builtins.rs  debug.rs  generator.rs  linearize.rs  list.rs  mod.rs  object.rs  opcode.rs
pusl_lang/src/lexer/: mod.rs  peek_while.rs  token.rs
pusl_lang/src/parser/: branch.rs  expression.rs  mod.rs
pusl_lang/tests/: lexer_test.rs  linearize_test.rs  parser_test.rs  run_test.rs
pusl_lang/tests/test_util/: mod.rs
resources/: errors.pusl  generator.pusl  secondary_source.pusl  selfthis.pusl  simple_program.pusl  small_source.pusl  yoink_filter.pusl
resources/lexer/: error-expect.json  small-actual.json  small-expect.json.xz
resources/linear/: error-actual.json  error-expect.json  simple-actual.json  simple-actual.json.xz  simple-expect.json.xz  small-actual.json  small-actual.json.xz  small-expect.json  small-expect.json.xz
resources/parse/: error-expect.json  small-actual.json  small-actual.json.xz  small-expect.json  small-expect.json.xz
resources/run/: error-expect.json  generator-expect.json  small-expect.json  yoink-expect.json
squirrel_lang/: Cargo.toml
squirrel_lang/src/: context.rs
squirrel_lang/src/parser/: ast.rs  context.rs  lexer.rs  mod.rs  tokens.rs
