[package]
name = "pusl"
version = "0.1.0"
authors = ["robot_rover <sam.obrien00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
pusl_lang = { path = "../pusl_lang", version = "0.1.0"}
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"
byteorder = "1.3.2"
shrust = "0.0.7"