[package]
name = "pusl_demo"
version = "0.1.0"
authors = ["robot_rover <sam.obrien00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pusl_lang = { path = "../pusl_lang", version = "0.1.0"}
simplelog = "0.8.0"
shrust = "0.0.7"