[package]
name = "pusl_lang"
version = "0.1.0"
authors = ["robot_rover <sam.obrien00@gmail.com>"]
edition = "2018"

[dependencies]
garbage = { path = "../garbage", version = "0.1.0"}
generational-arena = "0.2.6"
bitflags = "1.2.1"
serde = { version = "1.0.104", features = ["derive"] }
anymap = "0.12.1"
log = "0.4.8"
pad-adapter = "0.1.1"

# Should be dev-
serde_json = "1.0"
xz = "0.1.0"

[dev-dependencies]
simple_logger = { version = "1.6.0", features = ["colored"] }