[package]
name = "squirrel_lang"
version = "0.1.0"
authors = ["robot_rover <sam.obrien00@gmail.com>"]
edition = "2018"

[dependencies]
logos = "0.14"
anyhow = "1.0"
garbage = { path = "../garbage", version = "0.1"}
generational-arena = "0.2"
# bitflags = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
anymap = "0.12"
log = "0.4"
pad-adapter = "0.1"


[dev-dependencies]
simple_logger = { version = "1.6", features = ["colored"] }
serde_json = "1.0"